<resources>
    <string name="app_name">WeatherApp</string>
    <string name="check_favourite_cities">Check favourite cities</string>
    <string name="temperature">%s ℃</string>
    <string name="max_temperature">Max:\n%s ℃</string>
    <string name="min_temperature">Min: \n%s ℃</string>
    <string name="wind_speed">%s m/s</string>
    <string name="visibility">%s m</string>
    <string name="humidity">%s %%</string>
    <string name="pressure">%s hPa</string>
    <string name="floating_action_content">+</string>
    <string name="daily_weather_header">Daily weather</string>
    <string name="hourly_weather_header">Weather for every hour</string>
    <string name="weather_details_header">Details</string>
    <string name="details_sunrise_label">Sunrise</string>
    <string name="details_sunset_label">Sunset</string>
    <string name="details_pressure_label">Pressure</string>
    <string name="details_humidity_label">Humidity</string>
    <string name="details_visibility_label">Visibility</string>
    <string name="details_wind_speed_label">Wind speed</string>
    <string name="add_city_label">Search for a city</string>
    <string name="city_localization">%s, %s</string>
    <string name="add_city_empty_state_message">Search for a city.</string>
    <string name="add_city_empty_state_no_results">No Results. Please check spelling or try different keyword.</string>
    <string name="add_city_empty_state_error">Oops. We encountered an unexpected problem. </string>
    <string name="fetch_city_name_error">No city name found</string>
    <string name="delete">Delete</string>
</resources>