<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/weather_fragment">

    <TextView
        android:id="@+id/current_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/weather_details_header"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/daily_sunrise_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_sunrise_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_sunrise_label"
            tools:text="9:15" />

        <TextView
            android:id="@+id/daily_sunset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_sunset_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/daily_sunrise_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sunset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/daily_sunset_label"
            app:layout_constraintTop_toBottomOf="@id/daily_sunset_label"
            tools:text="17:15" />

        <TextView
            android:id="@+id/current_pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_pressure_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunrise_time" />

        <TextView
            android:id="@+id/current_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_pressure_label" />

        <TextView
            android:id="@+id/current_humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_humidity_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/sunset_time"
            app:layout_constraintTop_toBottomOf="@id/sunset_time" />

        <TextView
            android:id="@+id/current_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/current_humidity_label"
            app:layout_constraintTop_toBottomOf="@id/current_humidity_label" />

        <TextView
            android:id="@+id/current_visibility_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_visibility_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_pressure" />

        <TextView
            android:id="@+id/current_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_visibility_label" />

        <TextView
            android:id="@+id/current_wind_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_wind_speed_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/current_humidity"
            app:layout_constraintTop_toBottomOf="@id/current_humidity" />

        <TextView
            android:id="@+id/current_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/current_wind_speed_label"
            app:layout_constraintTop_toBottomOf="@id/current_wind_speed_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>